packages/@winglang/wingc/src/lsp/snapshots/signature/class_super.snap
---
source: libs/wingc/src/lsp/signature.rs
---
signatures:
  - label: "(hello: num): Base"
    documentation:
      kind: markdown
      value: ""
    parameters:
      - label: "hello: num"
    activeParameter: 0

